tests/paczka1/fuzzy1/20337249.err
Error in line 14: JbTQd0n S368 0,3
Error in line 12: X4NoBvCE S828 61,8
Error in line 23: S452 S828 37,1
Error in line 29: 13NwdMXSkSB S263 15,7
Error in line 38: mQBcDAjZ S368 83,1
